<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_calendar" android:title="@string/calendar"
        android:orderInCategory="100" />
    <item android:id="@+id/action_profile" android:title="@string/my_profile"
        android:orderInCategory="200" />
    <item android:id="@+id/action_supervisions" android:title="@string/supervisions"
        android:orderInCategory="300" />
    <item android:id="@+id/action_requests" android:title="@string/requests"
        android:orderInCategory="400" />
    <item android:id="@+id/action_supervisions_request" android:title="@string/supervisions_request"
        android:orderInCategory="500" />
    <item android:id="@+id/action_close_session" android:title="@string/close_session"
        android:orderInCategory="600" />
</menu>